# go-replicants

./: .gitignore  CMakeLists.txt  README  README.org  bitset.c  bitset.h  center_protein.m  contact-map.c  contact-map.h  doxygen.cfg  error.c  error.h  eval-potential.c  geometry.c  geometry.h  get-geometry-matlab.awk  linspace.h  metropolis.c  metropolis.h  molecular-player.c  molecular-simulator.c  molecular-simulator.h  molecular-viewer.c  molecule.h  movements.c  movements.h  pdb2xyz  plot-energies  potential.c  potential.h  protein.c  protein.h  protein_1pgb.m  protein_2gb1.m  replicas.c  replicas.h  resume-simulation  sample-proteins.c  simulation.c  simulation.h  (+13 more)
matlab/: center_protein.m  contact_map.m  distance_between_amino_acids.m  mean_distance_between_CAs.m  plot_proteins.m  potential.m
scripts/: get-geometry-c.awk
